--- a/gdgtSearchReview.html
+++ b/gdgtSearchReview.html
@@ -1,8 +1,69 @@
 <style>
-	a {-webkit-background-clip: border-box;-webkit-background-origin: padding-box;-webkit-background-size: auto;background-attachment: scroll;background-clip: border-box;background-color: rgb(238, 238, 238);background-image: none;background-origin: padding-box;background-size: auto;border-bottom-color: rgb(221, 221, 221);border-bottom-style: solid;border-bottom-width: 1px;border-image-outset: 0px;border-image-repeat: stretch;border-image-slice: 100%;border-image-source: none;border-image-width: 1;border-left-color: rgb(221, 221, 221);border-left-style: solid;border-left-width: 1px;border-right-color: rgb(221, 221, 221);border-right-style: solid;border-right-width: 1px;border-top-color: rgb(221, 221, 221);border-top-style: solid;border-top-width: 1px;color: rgb(51, 51, 51);cursor: pointer;display: block;font-family: proxima-nova, proxima-nova-1, proxima-nova-2, 'Proxima Nova', 'Segoe UI', Helvetica, Arial, sans-serif, font-size: 13px;height: 18px;line-height: 18px;list-style-image: none;list-style-position: outside;list-style-type: none;margin-bottom: 7px;margin-left: 0px;margin-right: 0px;margin-top: 0px;padding-bottom: 5px;padding-left: 0px;padding-right: 0px;padding-top: 5px;text-align: center;text-decoration: none;text-transform: uppercase;vertical-align: baseline;width: 120px;}
-	a:active {background-color: rgb(204, 204, 204);}
-	a:hover {background-color: rgb(221, 221, 221);border-bottom-color: rgb(187, 187, 187);border-left-color: rgb(187, 187, 187);border-right-color: rgb(187, 187, 187);border-top-color: rgb(187, 187, 187);}
-	a:focus {background-color: rgb(238, 238, 238);outline-color: rgb(229, 151, 0);outline-style: auto;outline-width: 5px;}
+	a {-webkit-background-clip: border-box;
+-webkit-background-origin: padding-box;
+-webkit-background-size: auto;
+background-attachment: scroll;
+background-clip: border-box;
+background-color: rgb(238, 238, 238);
+background-image: none;
+background-origin: padding-box;
+background-size: auto;
+border-bottom-color: rgb(221, 221, 221);
+border-bottom-style: solid;
+border-bottom-width: 1px;
+border-image-outset: 0px;
+border-image-repeat: stretch;
+border-image-slice: 100%;
+border-image-source: none;
+border-image-width: 1;
+border-left-color: rgb(221, 221, 221);
+border-left-style: solid;
+border-left-width: 1px;
+border-right-color: rgb(221, 221, 221);
+border-right-style: solid;
+border-right-width: 1px;
+border-top-color: rgb(221, 221, 221);
+border-top-style: solid;
+border-top-width: 1px;
+color: rgb(51, 51, 51);
+cursor: pointer;
+display: block;
+font-family: proxima-nova, proxima-nova-1, proxima-nova-2, 'Proxima Nova', 'Segoe UI', Helvetica, Arial, sans-serif;
+font-size: 13px;
+height: 18px;
+line-height: 18px;
+list-style-image: none;
+list-style-position: outside;
+list-style-type: none;
+margin-bottom: 7px;
+margin-left: 0px;
+margin-right: 0px;
+margin-top: 0px;
+padding-bottom: 5px;
+padding-left: 0px;
+padding-right: 0px;
+padding-top: 5px;
+text-align: center;
+text-decoration: none;
+text-transform: uppercase;
+vertical-align: baseline;
+width: 120px;}
+	a:active {
+background-color: rgb(204, 204, 204);
+}
+	a:hover {
+background-color: rgb(221, 221, 221);
+border-bottom-color: rgb(187, 187, 187);
+border-left-color: rgb(187, 187, 187);
+border-right-color: rgb(187, 187, 187);
+border-top-color: rgb(187, 187, 187);
+}
+	a:focus {
+background-color: rgb(238, 238, 238);
+outline-color: rgb(229, 151, 0);
+outline-style: auto;
+outline-width: 5px;
+}
 </style>
 Just drag this to your bookmarks bar!<br>
 View a gdgt product page with critic reviews on it...<br>
