--- a/gdgtSearchReview.html
+++ b/gdgtSearchReview.html
@@ -8,7 +8,7 @@
 	</style>
 	
 	<script>
-	document.body.onload = function () {
+	document.onload = function () {
 		document.write("done");
 	}
 	</script>
