--- a/gdgtSearchReview.html
+++ b/gdgtSearchReview.html
@@ -14,6 +14,7 @@
 	</script>
 </head>
 <body>
+updated
 Just drag this to your bookmarks bar!<br>
 View a gdgt product page with critic reviews on it...<br>
 and activate the bookmarklet!
