--- a/gdgtSearchReview.html
+++ b/gdgtSearchReview.html
@@ -5,7 +5,7 @@
 		a:active {background-color: rgb(204, 204, 204);}
 		a:hover {background-color: rgb(221, 221, 221);border-bottom-color: rgb(187, 187, 187);border-left-color: rgb(187, 187, 187);border-right-color: rgb(187, 187, 187);border-top-color: rgb(187, 187, 187);}
 		a:focus {background-color: rgb(238, 238, 238);outline-color: rgb(229, 151, 0);outline-style: auto;outline-width: 5px;}
-		iframe {visibility: none};
+		iframe {visibility: hidden};
 	</style>
 	
 	<script>
