added link to github changelog

--- a/gdgtSearchReview.html
+++ b/gdgtSearchReview.html
@@ -30,6 +30,8 @@
 Just drag this to your bookmarks bar!<br>
 View a gdgt product page with critic reviews on it...<br>
 and activate the bookmarklet!
+
+<a href=https://github.com/JCBuck/jsutils/commits/gh-pages> github commits/change log</a>
 </body>
 	
 </html>
