--- a/gdgtSearchReview.html
+++ b/gdgtSearchReview.html
@@ -26,7 +26,7 @@
 	</script>
 </head>
 <body>
-<a href=https://github.com/JCBuck/jsutils/commits/gh-pages> github commits/change log</a>
+<a href=https://github.com/JCBuck/jsutils/commits/gh-pages> github commits/change log</a><br>
 (This page dynamically creates the bookmarklet through downloading and minifying the script from my github)<br>
 
 Just drag this to your bookmarks bar!<br>
