--- a/ideasQuickGallery.html
+++ b/ideasQuickGallery.html
@@ -1,1 +1,1 @@
-<a href="javascript:(function(){[].forEach.call(document.querySelectorAll(".gallery>dl>dt>a>img"),function(i){i.src=i.src.replace(/-150x150/,'');i.parentNode.href=i.src;})})();return false;">Quickify</a>
+<a href="javascript:(function(){[].forEach.call(document.querySelectorAll('.gallery>dl>dt>a>img'),function(i){i.src=i.src.replace(/-150x150/,'');i.parentNode.href=i.src;})})()">Quickify</a>
