--- a/gdgtSearchReview.html
+++ b/gdgtSearchReview.html
@@ -5,7 +5,7 @@
 		a.cool:active  {background-color: rgb(204, 204, 204);}
 		a.cool:hover  {background-color: rgb(221, 221, 221);border-bottom-color: rgb(187, 187, 187);border-left-color: rgb(187, 187, 187);border-right-color: rgb(187, 187, 187);border-top-color: rgb(187, 187, 187);}
 		a.cool:focus  {background-color: rgb(238, 238, 238);outline-color: rgb(229, 151, 0);outline-style: auto;outline-width: 5px;}
-		
+	
 	</style>
 	
 	<script>
@@ -32,7 +32,7 @@
 	    jsCode.href=mys;
 	    jsCode.className = "cool"
 	  document.body.appendChild(jsCode);
-
+	
 	
 	};
 	</script>
@@ -44,7 +44,7 @@
 Just drag this to your bookmarks bar!<br>
 View a gdgt product page with critic reviews on it...<br>
 and activate the bookmarklet!
-
+nitro
 
 </body>
 	
