--- a/Ezedit_reg_expand_sz.html
+++ b/Ezedit_reg_expand_sz.html
@@ -75,7 +75,18 @@
         <div style="overflow:auto;">
             
             <div style="float:left; background-color: rgba(200,200,0,.2); width:50%">
-                <textarea style="height:800px; width: 100%" id="regtxt" onchange="convertToAscii(this)" onkeydown="convertToAscii(this)" onkeyup="convertToAscii(this)" ></textarea>
+                <textarea style="height:800px; width: 100%" id="regtxt" onchange="convertToAscii(this)" onkeydown="convertToAscii(this)" onkeyup="convertToAscii(this)" >
+Windows Registry Editor Version 5.00
+
+[HKEY_LOCAL_MACHINE\USER\Environment]
+
+"TEMP"=hex(2):25,00,55,00,53,00,45,00,52,00,50,00,52,00,4f,00,46,00,49,00,4c,\
+  00,45,00,25,00,5c,00,41,00,70,00,70,00,44,00,61,00,74,00,61,00,5c,00,4c,00,\
+  6f,00,63,00,61,00,6c,00,5c,00,54,00,65,00,6d,00,70,00,00,00
+"TMP"=hex(2):25,00,55,00,53,00,45,00,52,00,50,00,52,00,4f,00,46,00,49,00,4c,00,\
+  45,00,25,00,5c,00,41,00,70,00,70,00,44,00,61,00,74,00,61,00,5c,00,4c,00,6f,\
+  00,63,00,61,00,6c,00,5c,00,54,00,65,00,6d,00,70,00,00,00
+                </textarea>
             </div>
             <div style="float:right; width:50%; background-color:rgba(0,0,200,.2);">
                 <textarea style="height:800px; width: 100%" id="regout" onchange="convertToUnicodeHex(this)" onkeydown="convertToUnicodeHex(this)" onkeyup="convertToUnicodeHex(this)">
@@ -85,8 +96,6 @@ Windows Registry Editor Version 5.00
 
 "TEMP"=hex(2):%USERPROFILE%\AppData\Local\Temp
 "TMP"=hex(2):%USERPROFILE%\AppData\Local\Temp
-
-
                 </textarea>
  
             </div>
